Now the user and seller ids are passed in jwt tokens